--- a/interactive_projector.html
+++ b/interactive_projector.html
@@ -208,7 +208,7 @@
                 this.id = id;
                 this.title = title;
                 this.text = text;
-                this.pictureDataId = pictureDataId; //unused
+                this.pictureDataId = pictureDataId;
                 this.isActionable = isActionable;
                 this.tweakDataId = tweakDataId; //unused
                 this.mediaType = mediaType;
