deleted old unused id constant which is now a whole class (designAsset)

--- a/interactive_projector.html
+++ b/interactive_projector.html
@@ -73,8 +73,7 @@
                     closeBtn: "67eacf150c89adeaeb487c02",
                     closeBtnDisabled: "67eacd2f54be5d50b17f6a42",
                     actionBtn: "67eacf1511d353e4afae09d2",
-                    actionBtnDisabled: "67eace502229b047344ff591",
-                    chosenAsset: "67d47b040af04cc131e275e5"
+                    actionBtnDisabled: "67eace502229b047344ff591"
                 };
 
                 // DOM references
