added one opitmization note

--- a/interactive_projector.html
+++ b/interactive_projector.html
@@ -16,6 +16,7 @@
         // 3. adding the tweaks. refactoring the code (if needed). need an overloaded hide/show function version for the tweaks array (maybe embed a sequential animation within it).
 
         //{*} extra stuff:
+        // -  way too many calls happening (either proof with w/ a callonce flag check function (cheap soln i feel) or optimize listeners to be smarter.)
         // -  optimizing listeners.
         // -  rethink factory + singleton pattern for mediatypes. overkill or keep it?
 
