--- a/interactive_projector.html
+++ b/interactive_projector.html
@@ -160,6 +160,20 @@
                 containerEl.style.height = `${height}px`;
                 containerEl.style.transform = "scale(1)";
                 containerEl.style.transition = "width 0.4s ease, height 0.4s ease";
+
+                const newD = ``;
+
+                const maskPath = svg.querySelector("defs mask path");
+                if (maskPath) maskPath.setAttribute("d", newD);
+
+                const clipPath = svg.querySelector("defs clipPath path");
+                if (clipPath) clipPath.setAttribute("d", newD);
+
+                const maskedPath = svg.querySelector("path[mask]");
+                if (maskPath) maskedPath.setAttribute("d", newD);
+
+                const clippedPath = svg.querySelector("path[clip-path]");
+                if (clippedPath) clippedPath.setAttribute("d", newD);
             }
 
             resetTransform(el) {
