inserted result as comment

--- a/customDGeneration.html
+++ b/customDGeneration.html
@@ -31,6 +31,11 @@
         console.log(`Input: 177, 314, 15. Output: ${generateRoundedRectPath(177, 314, 15)}`);
         console.log(`Input: 499, 281, 15. Output: ${generateRoundedRectPath(499, 281, 15)}`);
         console.log(`Input: 499, 281, 30. Output: ${generateRoundedRectPath(499, 281, 30)}`);
+
+        //Input: 281, 281, 15. Output: M15 0 A15 15 0 0 0 0 15 L0 266 A15 15 0 0 0 15 281 L266 281 A15 15 0 0 0 281 266 L281 15 A15 15 0 0 0 266 0 Z
+        //Input: 177, 314, 15. Output: M15 0 A15 15 0 0 0 0 15 L0 299 A15 15 0 0 0 15 314 L162 314 A15 15 0 0 0 177 299 L177 15 A15 15 0 0 0 162 0 Z
+        //Input: 499, 281, 15. Output: M15 0 A15 15 0 0 0 0 15 L0 266 A15 15 0 0 0 15 281 L484 281 A15 15 0 0 0 499 266 L499 15 A15 15 0 0 0 484 0 Z
+        //Input: 499, 281, 30. Output: M30 0 A30 30 0 0 0 0 30 L0 251 A30 30 0 0 0 30 281 L469 281 A30 30 0 0 0 499 251 L499 30 A30 30 0 0 0 469 0 Z
     </script>
 </body>
 
